--- a/appAPI/TelerikWebApp1/MasterPage.Master
+++ b/appAPI/TelerikWebApp1/MasterPage.Master
@@ -6,6 +6,8 @@
 <head runat="server">
     <title></title>
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1, maximum-scale=1.0, user-scalable=no" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="styles/base.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -24,31 +26,6 @@
                             <a href="#" class="logo">
                                 <img src="images/logo.png" alt="site logo"/>
                             </a>
-                        </telerik:LayoutColumn>
-
-                        <%--Main Nav--%>
-                        <telerik:LayoutColumn Span="10" SpanMd="9" SpanSm="12" SpanXs="12">
-                            <telerik:RadMenu ID="RadMenu1" runat="server" RenderMode="Auto">
-                                <Items>
-                                    <telerik:RadMenuItem Text="Home" NavigateUrl="Default.aspx" />
-                                    <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="Grid Page" NavigateUrl="Grid.aspx" />
-                                    <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="ListView Page" NavigateUrl="ListView.aspx" />
-                                    <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="About" />
-                                    <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="Projects" />
-                                    <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="Dashboard" />
-                                    <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="..." />
-                                    <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="..." />
-                                    <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="Contacts" />
-                                </Items>
-                            </telerik:RadMenu>
                         </telerik:LayoutColumn>
                     </Columns>
                 </telerik:LayoutRow>
