--- a/appAPI/TelerikWebApp1/MasterPageSingleMenu.Master
+++ b/appAPI/TelerikWebApp1/MasterPageSingleMenu.Master
@@ -6,7 +6,8 @@
 <head runat="server">
     <title></title>
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1, maximum-scale=1.0, user-scalable=no" />
-    <link href="styles/base.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -18,27 +19,6 @@
                 <img src="images/logo.png" alt="site logo" />
             </a>
             <div class="header">
-                <telerik:RadMenu ID="RadMenu1" CssClass="mainMenu" runat="server" RenderMode="Auto">
-                    <Items>
-                        <telerik:RadMenuItem Text="Home" NavigateUrl="Default.aspx" />
-                        <telerik:RadMenuItem IsSeparator="true" />
-                        <telerik:RadMenuItem Text="Grid Page" NavigateUrl="Grid.aspx" />
-                        <telerik:RadMenuItem IsSeparator="true" />
-                        <telerik:RadMenuItem Text="ListView Page" NavigateUrl="ListView.aspx" />
-                        <telerik:RadMenuItem IsSeparator="true" />
-                        <telerik:RadMenuItem Text="About" />
-                        <telerik:RadMenuItem IsSeparator="true" />
-                        <telerik:RadMenuItem Text="Projects" />
-                        <telerik:RadMenuItem IsSeparator="true" />
-                        <telerik:RadMenuItem Text="Dashboard" />
-                        <telerik:RadMenuItem IsSeparator="true" />
-                        <telerik:RadMenuItem Text="..." />
-                        <telerik:RadMenuItem IsSeparator="true" />
-                        <telerik:RadMenuItem Text="..." />
-                        <telerik:RadMenuItem IsSeparator="true" />
-                        <telerik:RadMenuItem Text="Contacts" />
-                    </Items>
-                </telerik:RadMenu>
             </div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
@@ -46,7 +26,7 @@
             </asp:ContentPlaceHolder>
             <hr style="margin-top: 40px" />
             <div class="footer">
-               Footer: © 2002-2015 Company Inc, 201 Jones Rd, Waltham, MA 03451
+               Footer: © 2024 Wyatt Gallant Univerus
             </div>
         </div>
     </form>
