--- a/appAPI/TelerikWebApp1/MasterPageSingleMenu.Master
+++ b/appAPI/TelerikWebApp1/MasterPageSingleMenu.Master
@@ -20,10 +20,12 @@
             </a>
             <div class="header">
             </div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
-            </asp:ContentPlaceHolder>
+            <div>
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
+                </asp:ContentPlaceHolder>
+            </div>
             <hr style="margin-top: 40px" />
             <div class="footer">
                Footer: © 2024 Wyatt Gallant Univerus
